Fixed some things

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -77,12 +77,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "034fde84",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: 54000 Val:6000 Test:10000\n",
+      "INFO:root:Nodo listening at 127.0.0.1:39815\n",
+      "Train: 54000 Val:6000 Test:10000\n",
+      "INFO:root:Nodo listening at 127.0.0.1:41281\n",
+      "Train: 54000 Val:6000 Test:10000\n",
+      "INFO:root:Nodo listening at 127.0.0.1:39441\n",
+      "Train: 54000 Val:6000 Test:10000\n",
+      "INFO:root:Nodo listening at 127.0.0.1:44405\n",
+      "INFO:root:127.0.0.1:41281 Connected to 127.0.0.1:39815\n",
+      "INFO:root:127.0.0.1:39815 Conexión aceptada con 127.0.0.1:41281\n",
+      "INFO:root:127.0.0.1:39441 Connected to 127.0.0.1:41281\n",
+      "INFO:root:127.0.0.1:41281 Conexión aceptada con 127.0.0.1:39441\n",
+      "INFO:root:127.0.0.1:44405 Connected to 127.0.0.1:39441\n",
+      "INFO:root:127.0.0.1:39441 Conexión aceptada con 127.0.0.1:44405\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 51>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     50\u001b[0m nodes \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     51\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m6\u001b[39m):\n\u001b[0;32m---> 52\u001b[0m     \u001b[43mtest_node_down_on_learning\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     53\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36mtest_node_down_on_learning\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;66;03m# Check if they are connected\u001b[39;00m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m node \u001b[38;5;129;01min\u001b[39;00m nodes:\n\u001b[0;32m---> 27\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(node\u001b[38;5;241m.\u001b[39mneightboors) \u001b[38;5;241m==\u001b[39m n\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;66;03m# Start Learning\u001b[39;00m\n\u001b[1;32m     30\u001b[0m nodes[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mset_start_learning(rounds\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m,epochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "from p2pfl.learning.pytorch.mnist_examples.mnistfederated_dm import MnistFederatedDM\n",
     "from p2pfl.learning.pytorch.mnist_examples.models.cnn import CNN\n",
@@ -719,8 +752,109 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "8466ba48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a ={'127.0.0.1:43617', '127.0.0.1:49487', '127.0.0.1:46509', '127.0.0.1:48487'} \n",
+    "b = {'127.0.0.1:43617', '127.0.0.1:49487', '127.0.0.1:46509', '127.0.0.1:48487'}\n",
+    "\n",
+    "a == b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "56b5a13f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: 54000 Val:6000 Test:10000\n",
+      "Train: 54000 Val:6000 Test:10000\n",
+      "Train: 54000 Val:6000 Test:10000\n",
+      "Train: 54000 Val:6000 Test:10000\n",
+      "INFO:root:Nodo listening at 127.0.0.1:51175\n",
+      "INFO:root:Nodo listening at 127.0.0.1:56831\n",
+      "INFO:root:Nodo listening at 127.0.0.1:49901\n",
+      "INFO:root:Nodo listening at 127.0.0.1:56509\n",
+      "INFO:root:127.0.0.1:51175 Connected to 127.0.0.1:56831\n",
+      "INFO:root:127.0.0.1:56831 Conexión aceptada con 127.0.0.1:51175\n",
+      "INFO:root:127.0.0.1:49901 Connected to 127.0.0.1:51175\n",
+      "INFO:root:127.0.0.1:51175 Conexión aceptada con 127.0.0.1:49901\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 37>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     34\u001b[0m     time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m0.1\u001b[39m) \u001b[38;5;66;03m#Esperar por la asincronía\u001b[39;00m\n\u001b[1;32m     35\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(n1\u001b[38;5;241m.\u001b[39mneightboors) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mlen\u001b[39m(n2\u001b[38;5;241m.\u001b[39mneightboors) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mlen\u001b[39m(n3\u001b[38;5;241m.\u001b[39mneightboors) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mlen\u001b[39m(n4\u001b[38;5;241m.\u001b[39mneightboors) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m3\u001b[39m\n\u001b[0;32m---> 37\u001b[0m \u001b[43mfour_nodes\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36mfour_nodes\u001b[0;34m()\u001b[0m\n\u001b[1;32m     28\u001b[0m n3\u001b[38;5;241m.\u001b[39mconnect_to(n1\u001b[38;5;241m.\u001b[39mhost,n1\u001b[38;5;241m.\u001b[39mport)\n\u001b[1;32m     29\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m0.1\u001b[39m) \u001b[38;5;66;03m#Esperar por la asincronía\u001b[39;00m\n\u001b[0;32m---> 30\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(n1\u001b[38;5;241m.\u001b[39mneightboors) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mlen\u001b[39m(n2\u001b[38;5;241m.\u001b[39mneightboors) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mlen\u001b[39m(n3\u001b[38;5;241m.\u001b[39mneightboors) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;66;03m# Conexión n4 n1\u001b[39;00m\n\u001b[1;32m     33\u001b[0m n4\u001b[38;5;241m.\u001b[39mconnect_to(n1\u001b[38;5;241m.\u001b[39mhost,n1\u001b[38;5;241m.\u001b[39mport)\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "import pytest\n",
+    "from p2pfl.base_node import BaseNode\n",
+    "from p2pfl.communication_protocol import CommunicationProtocol\n",
+    "import time\n",
+    "import pytest\n",
+    "from p2pfl.learning.pytorch.mnist_examples.mnistfederated_dm import MnistFederatedDM\n",
+    "from p2pfl.learning.pytorch.mnist_examples.models.mlp import MLP\n",
+    "from p2pfl.node import Node\n",
+    "from p2pfl.settings import Settings\n",
+    "\n",
+    "\n",
+    "def four_nodes():\n",
+    "    n1 = Node(MLP(),MnistFederatedDM())\n",
+    "    n2 = Node(MLP(),MnistFederatedDM())\n",
+    "    n3 = Node(MLP(),MnistFederatedDM())\n",
+    "    n4 = Node(MLP(),MnistFederatedDM())\n",
+    "    n1.start()\n",
+    "    n2.start()\n",
+    "    n3.start()\n",
+    "    n4.start()\n",
+    "\n",
+    "    # Conexión n1 n2\n",
+    "    n1.connect_to(n2.host,n2.port)\n",
+    "    time.sleep(0.1) #Esperar por la asincronía\n",
+    "    assert len(n1.neightboors) == len(n2.neightboors)==1\n",
+    "\n",
+    "    # Conexión n3 n1\n",
+    "    n3.connect_to(n1.host,n1.port)\n",
+    "    time.sleep(0.1) #Esperar por la asincronía\n",
+    "    assert len(n1.neightboors) == len(n2.neightboors) == len(n3.neightboors) == 2\n",
+    "\n",
+    "    # Conexión n4 n1\n",
+    "    n4.connect_to(n1.host,n1.port)\n",
+    "    time.sleep(0.1) #Esperar por la asincronía\n",
+    "    assert len(n1.neightboors) == len(n2.neightboors) == len(n3.neightboors) == len(n4.neightboors) == 3\n",
+    "\n",
+    "four_nodes()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "de441412",
+   "id": "27453297",
    "metadata": {},
    "outputs": [],
    "source": []
