Settings commented and privatized neighbors

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -13,254 +13,14 @@
      "output_type": "stream",
      "text": [
       "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Nodo listening at 127.0.0.1:40641\n",
+      "INFO:root:Nodo listening at 127.0.0.1:49545\n",
       "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Nodo listening at 127.0.0.1:40109\n",
+      "INFO:root:Nodo listening at 127.0.0.1:33419\n",
       "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Nodo listening at 127.0.0.1:43103\n",
+      "INFO:root:Nodo listening at 127.0.0.1:34551\n",
       "Train: 54000 Val:6000 Test:10000\n",
-      "INFO:root:Nodo listening at 127.0.0.1:53885\n",
-      "INFO:root:127.0.0.1:40641 Conexión aceptada con 127.0.0.1:40109\n",
-      "INFO:root:127.0.0.1:40109 Connected to 127.0.0.1:40641\n",
-      "INFO:root:127.0.0.1:43103 Connected to 127.0.0.1:40109\n",
-      "INFO:root:127.0.0.1:40109 Conexión aceptada con 127.0.0.1:43103\n",
-      "INFO:root:127.0.0.1:40641 Connected to 127.0.0.1:43103\n",
-      "INFO:root:127.0.0.1:43103 Conexión aceptada con 127.0.0.1:40641\n",
-      "INFO:root:127.0.0.1:53885 Connected to 127.0.0.1:43103\n",
-      "INFO:root:127.0.0.1:43103 Conexión aceptada con 127.0.0.1:53885\n",
-      "INFO:root:127.0.0.1:40109 Connected to 127.0.0.1:53885\n",
-      "INFO:root:127.0.0.1:53885 Conexión aceptada con 127.0.0.1:40109\n",
-      "INFO:root:127.0.0.1:40641 Connected to 127.0.0.1:53885\n",
-      "INFO:root:127.0.0.1:53885 Conexión aceptada con 127.0.0.1:40641\n",
-      "INFO:root:(127.0.0.1:40641) Broadcasting start learning...\n",
-      "INFO:root:(127.0.0.1:40109) Waiting initialization.\n",
-      "INFO:root:(127.0.0.1:40641) Waiting initialization.\n",
-      "INFO:root:(127.0.0.1:53885) Waiting initialization.\n",
-      "INFO:root:(127.0.0.1:43103) Waiting initialization.\n",
-      "INFO:root:(127.0.0.1:40641) Gossiping model initialization.\n",
-      "INFO:root:(127.0.0.1:40641) Gossiping model to 3 nodes set nodes.\n",
-      "INFO:root:(127.0.0.1:53885) Initialicing Model Weights\n",
-      "INFO:root:(127.0.0.1:53885) Gossiping model initialization.\n",
-      "INFO:root:(127.0.0.1:53885) Gossiping model to 2 nodes set nodes.\n",
-      "INFO:root:(127.0.0.1:40109) Initialicing Model Weights\n",
-      "INFO:root:(127.0.0.1:40109) Gossiping model initialization.\n",
-      "INFO:root:(127.0.0.1:40109) Gossiping model to 1 nodes set nodes.\n",
-      "INFO:root:(127.0.0.1:43103) Initialicing Model Weights\n",
-      "INFO:root:(127.0.0.1:43103) Gossiping model initialization.\n",
-      "INFO:root:(127.0.0.1:43103) Gossip finished.\n",
-      "INFO:root:(127.0.0.1:40641) Gossip finished.\n",
-      "INFO:root:(127.0.0.1:53885) Gossip finished.\n",
-      "INFO:root:(127.0.0.1:40109) Gossip finished.\n",
-      "INFO:root:(127.0.0.1:43103) Sending train set vote.\n",
-      "INFO:root:(127.0.0.1:43103) Self Vote: [('127.0.0.1:53885', 656), ('127.0.0.1:43103', 331), ('127.0.0.1:40641', 32)]\n",
-      "INFO:root:(127.0.0.1:43103) Waiting other node votes.\n",
-      "INFO:root:(127.0.0.1:40641) Sending train set vote.\n",
-      "INFO:root:(127.0.0.1:40641) Self Vote: [('127.0.0.1:53885', 29), ('127.0.0.1:43103', 243), ('127.0.0.1:40109', 174)]\n",
-      "INFO:root:(127.0.0.1:40641) Waiting other node votes.\n",
-      "INFO:root:(127.0.0.1:53885) Sending train set vote.\n",
-      "INFO:root:(127.0.0.1:53885) Self Vote: [('127.0.0.1:43103', 735), ('127.0.0.1:40641', 492), ('127.0.0.1:53885', 77)]\n",
-      "INFO:root:(127.0.0.1:53885) Waiting other node votes.\n",
-      "INFO:root:(127.0.0.1:40109) Sending train set vote.\n",
-      "INFO:root:(127.0.0.1:40109) Self Vote: [('127.0.0.1:40641', 2), ('127.0.0.1:40109', 216), ('127.0.0.1:53885', 30)]\n",
-      "INFO:root:(127.0.0.1:40109) Waiting other node votes.\n",
-      "INFO:root:(127.0.0.1:43103) VOTING RESULTS: [('127.0.0.1:43103', 1309), ('127.0.0.1:53885', 792), ('127.0.0.1:40641', 526), ('127.0.0.1:40109', 390)]\n",
-      "INFO:root:(127.0.0.1:53885) VOTING RESULTS: [('127.0.0.1:43103', 1309), ('127.0.0.1:53885', 792), ('127.0.0.1:40641', 526), ('127.0.0.1:40109', 390)]\n",
-      "INFO:root:(127.0.0.1:40641) VOTING RESULTS: [('127.0.0.1:43103', 1309), ('127.0.0.1:53885', 792), ('127.0.0.1:40641', 526), ('127.0.0.1:40109', 390)]\n",
-      "INFO:root:(127.0.0.1:40109) VOTING RESULTS: [('127.0.0.1:43103', 1309), ('127.0.0.1:53885', 792), ('127.0.0.1:40641', 526), ('127.0.0.1:40109', 390)]\n",
-      "INFO:root:(127.0.0.1:43103) TOP NODES RESULTS: ['127.0.0.1:43103', '127.0.0.1:53885', '127.0.0.1:40641', '127.0.0.1:40109']\n",
-      "INFO:root:(127.0.0.1:53885) TOP NODES RESULTS: ['127.0.0.1:43103', '127.0.0.1:53885', '127.0.0.1:40641', '127.0.0.1:40109']\n",
-      "INFO:root:(127.0.0.1:40641) TOP NODES RESULTS: ['127.0.0.1:43103', '127.0.0.1:53885', '127.0.0.1:40641', '127.0.0.1:40109']\n",
-      "INFO:root:(127.0.0.1:40109) TOP NODES RESULTS: ['127.0.0.1:43103', '127.0.0.1:53885', '127.0.0.1:40641', '127.0.0.1:40109']\n",
-      "INFO:root:(127.0.0.1:43103) Computed 4 votes.\n",
-      "INFO:root:(127.0.0.1:53885) Computed 4 votes.\n",
-      "INFO:root:(127.0.0.1:40641) Computed 4 votes.\n",
-      "INFO:root:(127.0.0.1:40109) Computed 4 votes.\n",
-      "INFO:root:127.0.0.1:43103 Train set of 4 nodes. ['127.0.0.1:43103', '127.0.0.1:53885', '127.0.0.1:40641', '127.0.0.1:40109']\n",
-      "INFO:root:127.0.0.1:53885 Train set of 4 nodes. ['127.0.0.1:43103', '127.0.0.1:53885', '127.0.0.1:40641', '127.0.0.1:40109']\n",
-      "INFO:root:127.0.0.1:40641 Train set of 4 nodes. ['127.0.0.1:43103', '127.0.0.1:53885', '127.0.0.1:40641', '127.0.0.1:40109']\n",
-      "INFO:root:127.0.0.1:40109 Train set of 4 nodes. ['127.0.0.1:43103', '127.0.0.1:53885', '127.0.0.1:40641', '127.0.0.1:40109']\n",
-      "INFO:root:(127.0.0.1:43103) Evaluating...\n",
-      "INFO:root:(127.0.0.1:53885) Evaluating...\n",
-      "INFO:root:(127.0.0.1:40641) Evaluating...\n",
-      "INFO:root:(127.0.0.1:40109) Evaluating...\n",
-      "INFO:root:(127.0.0.1:43103) Training...\n",
-      "INFO:root:(127.0.0.1:53885) Training...\n",
-      "INFO:root:(127.0.0.1:40641) Training...\n",
-      "INFO:root:(127.0.0.1:40109) Training...\n",
-      "INFO:root:(127.0.0.1:43103) Model added (1/4) from ['127.0.0.1:43103']\n",
-      "INFO:root:(127.0.0.1:53885) Model added (1/4) from ['127.0.0.1:53885']\n",
-      "INFO:root:(127.0.0.1:40641) Model added (1/4) from ['127.0.0.1:40641']\n",
-      "INFO:root:(127.0.0.1:40109) Model added (1/4) from ['127.0.0.1:40109']\n",
-      "INFO:root:(127.0.0.1:43103) Gossiping model to 3 nodes set nodes.\n",
-      "INFO:root:(127.0.0.1:53885) Gossiping model to 3 nodes set nodes.\n",
-      "INFO:root:(127.0.0.1:40641) Gossiping model to 3 nodes set nodes.\n",
-      "INFO:root:(127.0.0.1:40109) Gossiping model to 3 nodes set nodes.\n",
-      "INFO:root:(127.0.0.1:40109) Model added (2/4) from ['127.0.0.1:53885']\n",
-      "INFO:root:(127.0.0.1:40641) Model added (2/4) from ['127.0.0.1:43103']\n",
-      "INFO:root:(127.0.0.1:43103) Model added (2/4) from ['127.0.0.1:40109']\n",
-      "INFO:root:(127.0.0.1:40109) Model added (3/4) from ['127.0.0.1:40641']\n",
-      "INFO:root:(127.0.0.1:53885) Model added (2/4) from ['127.0.0.1:40641']\n",
-      "INFO:root:(127.0.0.1:53885) Model added (3/4) from ['127.0.0.1:40109']\n",
-      "INFO:root:(127.0.0.1:53885) Model added (4/4) from ['127.0.0.1:43103']\n",
-      "INFO:root:(127.0.0.1:53885) Agregating models.\n",
-      "INFO:root:(127.0.0.1:40641) Model added (3/4) from ['127.0.0.1:53885']\n",
-      "INFO:root:(127.0.0.1:43103) Model added (3/4) from ['127.0.0.1:40641']\n",
-      "INFO:root:(127.0.0.1:40641) Gossiping model to 2 nodes set nodes.\n",
-      "INFO:root:(127.0.0.1:40109) Model added (4/4) from ['127.0.0.1:43103']\n",
-      "INFO:root:(127.0.0.1:43103) Gossiping model to 2 nodes set nodes.\n",
-      "INFO:root:(127.0.0.1:40109) Agregating models.\n",
-      "DEBUG:root:(127.0.0.1:43103) Can't add a model that has already been added ['127.0.0.1:53885', '127.0.0.1:40641']\n",
-      "DEBUG:root:(127.0.0.1:40641) Can't add a model that has already been added ['127.0.0.1:40109', '127.0.0.1:53885']\n",
-      "INFO:root:(127.0.0.1:53885) Gossiping model to 2 nodes set nodes.\n",
-      "INFO:root:(127.0.0.1:40109) Gossiping model to 2 nodes set nodes.\n",
-      "INFO:root:(127.0.0.1:40641) Model added (4/4) from ['127.0.0.1:40109']\n",
-      "INFO:root:(127.0.0.1:40641) Agregating models.\n",
-      "INFO:root:(127.0.0.1:43103) Model added (4/4) from ['127.0.0.1:53885']\n",
-      "INFO:root:(127.0.0.1:43103) Agregating models.\n",
-      "INFO:root:(127.0.0.1:40641) Gossip finished.\n",
-      "INFO:root:(127.0.0.1:40641) Waiting aregation.\n",
-      "INFO:root:(127.0.0.1:43103) Gossip finished.\n",
-      "INFO:root:(127.0.0.1:40641) Gossiping agregated model.\n",
-      "INFO:root:(127.0.0.1:43103) Waiting aregation.\n",
-      "INFO:root:NC STAT: 0 NODE ROUND: 0\n",
-      "INFO:root:(127.0.0.1:43103) Gossiping agregated model.\n",
-      "INFO:root:NC STAT: 0 NODE ROUND: 0\n",
-      "INFO:root:(127.0.0.1:53885) Gossip finished.\n",
-      "INFO:root:NC STAT: 0 NODE ROUND: 0\n",
-      "INFO:root:(127.0.0.1:40109) Gossip finished.\n",
-      "INFO:root:NC STAT: 0 NODE ROUND: 0\n",
-      "INFO:root:(127.0.0.1:53885) Waiting aregation.\n",
-      "INFO:root:NC STAT: 0 NODE ROUND: 0\n",
-      "INFO:root:(127.0.0.1:40109) Waiting aregation.\n",
-      "INFO:root:NC STAT: 0 NODE ROUND: 0\n",
-      "INFO:root:(127.0.0.1:53885) Gossiping agregated model.\n",
-      "INFO:root:(127.0.0.1:40641) Gossip finished.\n",
-      "INFO:root:(127.0.0.1:40109) Gossiping agregated model.\n",
-      "INFO:root:(127.0.0.1:43103) Gossip finished.\n",
-      "INFO:root:NC STAT: 0 NODE ROUND: 0\n",
-      "INFO:root:(127.0.0.1:40641) Round 1 of 2 finished.\n",
-      "INFO:root:NC STAT: 0 NODE ROUND: 0\n",
-      "INFO:root:(127.0.0.1:43103) Round 1 of 2 finished.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:NC STAT: 0 NODE ROUND: 0\n",
-      "INFO:root:(127.0.0.1:40641) Sending train set vote.\n",
-      "INFO:root:NC STAT: 0 NODE ROUND: 0\n",
-      "INFO:root:(127.0.0.1:43103) Sending train set vote.\n",
-      "INFO:root:NC STAT: 0 NODE ROUND: 0\n",
-      "INFO:root:(127.0.0.1:40641) Self Vote: [('127.0.0.1:53885', 521), ('127.0.0.1:43103', 37), ('127.0.0.1:40641', 155)]\n",
-      "INFO:root:NC STAT: 0 NODE ROUND: 0\n",
-      "INFO:root:(127.0.0.1:43103) Self Vote: [('127.0.0.1:40109', 698), ('127.0.0.1:53885', 260), ('127.0.0.1:40641', 131)]\n",
-      "INFO:root:(127.0.0.1:53885) Gossip finished.\n",
-      "INFO:root:(127.0.0.1:40641) Waiting other node votes.\n",
-      "INFO:root:(127.0.0.1:40109) Gossip finished.\n",
-      "INFO:root:(127.0.0.1:43103) Waiting other node votes.\n",
-      "INFO:root:(127.0.0.1:53885) Round 1 of 2 finished.\n",
-      "INFO:root:(127.0.0.1:40109) Round 1 of 2 finished.\n",
-      "INFO:root:(127.0.0.1:53885) Sending train set vote.\n",
-      "INFO:root:(127.0.0.1:40109) Sending train set vote.\n",
-      "INFO:root:(127.0.0.1:53885) Self Vote: [('127.0.0.1:43103', 739), ('127.0.0.1:40109', 97), ('127.0.0.1:40641', 204)]\n",
-      "INFO:root:(127.0.0.1:40109) Self Vote: [('127.0.0.1:40109', 458), ('127.0.0.1:43103', 74), ('127.0.0.1:40641', 145)]\n",
-      "INFO:root:(127.0.0.1:53885) Waiting other node votes.\n",
-      "INFO:root:(127.0.0.1:40641) VOTING RESULTS: [('127.0.0.1:40109', 1253), ('127.0.0.1:43103', 850), ('127.0.0.1:53885', 781), ('127.0.0.1:40641', 635)]\n",
-      "INFO:root:(127.0.0.1:43103) VOTING RESULTS: [('127.0.0.1:40109', 1253), ('127.0.0.1:43103', 850), ('127.0.0.1:53885', 781), ('127.0.0.1:40641', 635)]\n",
-      "INFO:root:(127.0.0.1:40109) Waiting other node votes.\n",
-      "INFO:root:(127.0.0.1:53885) VOTING RESULTS: [('127.0.0.1:40109', 1253), ('127.0.0.1:43103', 850), ('127.0.0.1:53885', 781), ('127.0.0.1:40641', 635)]\n",
-      "INFO:root:(127.0.0.1:40641) TOP NODES RESULTS: ['127.0.0.1:40109', '127.0.0.1:43103', '127.0.0.1:53885', '127.0.0.1:40641']\n",
-      "INFO:root:(127.0.0.1:43103) TOP NODES RESULTS: ['127.0.0.1:40109', '127.0.0.1:43103', '127.0.0.1:53885', '127.0.0.1:40641']\n",
-      "INFO:root:(127.0.0.1:40109) VOTING RESULTS: [('127.0.0.1:40109', 1253), ('127.0.0.1:43103', 850), ('127.0.0.1:53885', 781), ('127.0.0.1:40641', 635)]\n",
-      "INFO:root:(127.0.0.1:53885) TOP NODES RESULTS: ['127.0.0.1:40109', '127.0.0.1:43103', '127.0.0.1:53885', '127.0.0.1:40641']\n",
-      "INFO:root:(127.0.0.1:40641) Computed 4 votes.\n",
-      "INFO:root:(127.0.0.1:43103) Computed 4 votes.\n",
-      "INFO:root:(127.0.0.1:40109) TOP NODES RESULTS: ['127.0.0.1:40109', '127.0.0.1:43103', '127.0.0.1:53885', '127.0.0.1:40641']\n",
-      "INFO:root:(127.0.0.1:53885) Computed 4 votes.\n",
-      "INFO:root:127.0.0.1:40641 Train set of 4 nodes. ['127.0.0.1:40109', '127.0.0.1:43103', '127.0.0.1:53885', '127.0.0.1:40641']\n",
-      "INFO:root:127.0.0.1:43103 Train set of 4 nodes. ['127.0.0.1:40109', '127.0.0.1:43103', '127.0.0.1:53885', '127.0.0.1:40641']\n",
-      "INFO:root:(127.0.0.1:40109) Computed 4 votes.\n",
-      "INFO:root:127.0.0.1:53885 Train set of 4 nodes. ['127.0.0.1:40109', '127.0.0.1:43103', '127.0.0.1:53885', '127.0.0.1:40641']\n",
-      "INFO:root:(127.0.0.1:40641) Evaluating...\n",
-      "INFO:root:(127.0.0.1:43103) Evaluating...\n",
-      "INFO:root:127.0.0.1:40109 Train set of 4 nodes. ['127.0.0.1:40109', '127.0.0.1:43103', '127.0.0.1:53885', '127.0.0.1:40641']\n",
-      "INFO:root:(127.0.0.1:53885) Evaluating...\n",
-      "INFO:root:(127.0.0.1:40641) Training...\n",
-      "INFO:root:(127.0.0.1:43103) Training...\n",
-      "INFO:root:(127.0.0.1:40109) Evaluating...\n",
-      "INFO:root:(127.0.0.1:53885) Training...\n",
-      "INFO:root:(127.0.0.1:40641) Model added (1/4) from ['127.0.0.1:40641']\n",
-      "INFO:root:(127.0.0.1:40109) Training...\n",
-      "INFO:root:(127.0.0.1:43103) Model added (1/4) from ['127.0.0.1:43103']\n",
-      "INFO:root:(127.0.0.1:53885) Model added (1/4) from ['127.0.0.1:53885']\n",
-      "INFO:root:(127.0.0.1:40641) Gossiping model to 3 nodes set nodes.\n",
-      "INFO:root:(127.0.0.1:40109) Model added (1/4) from ['127.0.0.1:40109']\n",
-      "INFO:root:(127.0.0.1:43103) Gossiping model to 3 nodes set nodes.\n",
-      "INFO:root:(127.0.0.1:53885) Gossiping model to 3 nodes set nodes.\n",
-      "INFO:root:(127.0.0.1:40109) Gossiping model to 3 nodes set nodes.\n",
-      "INFO:root:(127.0.0.1:40109) Model added (2/4) from ['127.0.0.1:53885']\n",
-      "INFO:root:(127.0.0.1:43103) Model added (2/4) from ['127.0.0.1:40641']\n",
-      "INFO:root:(127.0.0.1:43103) Model added (3/4) from ['127.0.0.1:40109']\n",
-      "INFO:root:(127.0.0.1:53885) Model added (2/4) from ['127.0.0.1:43103']\n",
-      "INFO:root:(127.0.0.1:53885) Model added (3/4) from ['127.0.0.1:40641']\n",
-      "INFO:root:(127.0.0.1:53885) Model added (4/4) from ['127.0.0.1:40109']\n",
-      "INFO:root:(127.0.0.1:53885) Agregating models.\n",
-      "INFO:root:(127.0.0.1:40641) Model added (2/4) from ['127.0.0.1:43103']\n",
-      "INFO:root:(127.0.0.1:40641) Model added (3/4) from ['127.0.0.1:53885']\n",
-      "INFO:root:(127.0.0.1:40109) Model added (3/4) from ['127.0.0.1:40641']\n",
-      "INFO:root:(127.0.0.1:40641) Gossiping model to 2 nodes set nodes.\n",
-      "INFO:root:(127.0.0.1:53885) Gossiping model to 3 nodes set nodes.\n",
-      "INFO:root:(127.0.0.1:43103) Gossiping model to 2 nodes set nodes.\n",
-      "INFO:root:(127.0.0.1:40109) Gossiping model to 2 nodes set nodes.\n",
-      "DEBUG:root:(127.0.0.1:40109) Can't add a model that has already been added ['127.0.0.1:43103', '127.0.0.1:40641']\n",
-      "INFO:root:(127.0.0.1:43103) Model added (4/4) from ['127.0.0.1:53885']\n",
-      "DEBUG:root:(127.0.0.1:40641) Can't add a model that has already been added ['127.0.0.1:40109', '127.0.0.1:53885']\n",
-      "INFO:root:(127.0.0.1:43103) Agregating models.\n",
-      "INFO:root:(127.0.0.1:40641) Model added (4/4) from ['127.0.0.1:40109']\n",
-      "INFO:root:(127.0.0.1:40641) Agregating models.\n",
-      "INFO:root:(127.0.0.1:40109) Model added (4/4) from ['127.0.0.1:43103']\n",
-      "INFO:root:(127.0.0.1:40109) Agregating models.\n",
-      "INFO:root:(127.0.0.1:40641) Gossip finished.\n",
-      "INFO:root:(127.0.0.1:40641) Waiting aregation.\n",
-      "INFO:root:(127.0.0.1:40641) Gossiping agregated model.\n",
-      "INFO:root:NC STAT: 1 NODE ROUND: 1\n",
-      "INFO:root:NC STAT: 1 NODE ROUND: 1\n",
-      "INFO:root:NC STAT: 1 NODE ROUND: 1\n",
-      "INFO:root:(127.0.0.1:53885) Gossip finished.\n",
-      "INFO:root:(127.0.0.1:40641) Gossip finished.\n",
-      "INFO:root:(127.0.0.1:40109) Gossip finished.\n",
-      "INFO:root:(127.0.0.1:43103) Gossip finished.\n",
-      "INFO:root:(127.0.0.1:53885) Waiting aregation.\n",
-      "INFO:root:(127.0.0.1:40641) Round 2 of 2 finished.\n",
-      "INFO:root:(127.0.0.1:40109) Waiting aregation.\n",
-      "INFO:root:(127.0.0.1:43103) Waiting aregation.\n",
-      "INFO:root:(127.0.0.1:53885) Gossiping agregated model.\n",
-      "INFO:root:(127.0.0.1:40641) Evaluating...\n",
-      "INFO:root:(127.0.0.1:40109) Gossiping agregated model.\n",
-      "INFO:root:(127.0.0.1:43103) Gossiping agregated model.\n",
-      "INFO:root:NC STAT: 1 NODE ROUND: 1\n",
-      "INFO:root:(127.0.0.1:40641) Taining finished!!.\n",
-      "INFO:root:NC STAT: 1 NODE ROUND: 1\n",
-      "INFO:root:NC STAT: 1 NODE ROUND: 1\n",
-      "INFO:root:NC STAT: 1 NODE ROUND: 1\n",
-      "INFO:root:NC STAT: 1 NODE ROUND: 1\n",
-      "INFO:root:NC STAT: 1 NODE ROUND: 1\n",
-      "INFO:root:NC STAT: 1 NODE ROUND: 1\n",
-      "INFO:root:NC STAT: 1 NODE ROUND: 1\n",
-      "INFO:root:NC STAT: 1 NODE ROUND: 1\n",
-      "INFO:root:(127.0.0.1:53885) Gossip finished.\n",
-      "INFO:root:(127.0.0.1:40109) Gossip finished.\n",
-      "INFO:root:(127.0.0.1:43103) Gossip finished.\n",
-      "INFO:root:(127.0.0.1:53885) Round 2 of 2 finished.\n",
-      "INFO:root:(127.0.0.1:40109) Round 2 of 2 finished.\n",
-      "INFO:root:(127.0.0.1:43103) Round 2 of 2 finished.\n",
-      "INFO:root:(127.0.0.1:53885) Evaluating...\n",
-      "INFO:root:(127.0.0.1:40109) Evaluating...\n",
-      "INFO:root:(127.0.0.1:43103) Evaluating...\n",
-      "INFO:root:(127.0.0.1:53885) Taining finished!!.\n",
-      "INFO:root:(127.0.0.1:40109) Taining finished!!.\n",
-      "INFO:root:(127.0.0.1:43103) Taining finished!!.\n"
+      "INFO:root:Nodo listening at 127.0.0.1:45773\n",
+      "a\n"
      ]
     }
    ],
@@ -283,16 +43,20 @@
     "        node.start()\n",
     "        nodes.append(node)\n",
     "\n",
+    "    print(\"a\")\n",
+    "        \n",
     "    # Node Connection\n",
     "    for i in range(len(nodes)-1):\n",
     "        nodes[i+1].connect_to(nodes[i].host,nodes[i].port,full=True)\n",
     "        time.sleep(.1)\n",
+    "        print(\"a\")\n",
+    "        \n",
     "\n",
     "    time.sleep(3)     \n",
     "        \n",
     "    # Check if they are connected\n",
     "    for node in nodes:\n",
-    "        assert len(node.neightboors) == n-1\n",
+    "        assert len(node.neightbors) == n-1\n",
     "\n",
     "    # Start Learning\n",
     "    nodes[0].set_start_learning(rounds=r,epochs=0)\n",
@@ -594,7 +358,7 @@
     "\n",
     "    # Check if they are connected\n",
     "    for node in nodes:\n",
-    "        assert len(node.neightboors) == n-1\n",
+    "        assert len(node.neightbors) == n-1\n",
     "\n",
     "    # Start Learning\n",
     "    nodes[0].set_start_learning(rounds=2,epochs=0)\n",
