--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -794,7 +794,7 @@
     "\n",
     "    time.sleep(2) # Wait for asincronity    \n",
     "\n",
-    "    assert len(n1.heartbeater.get_nodes()) == len(n2.heartbeater.get_nodes()) == len(n3.heartbeater.get_nodes()) == len(n4.heartbeater.get_nodes()) == 3\n",
+    "    assert len(n1.get_network_nodes()) == len(n2.get_network_nodes()) == len(n3.get_network_nodes()) == len(n4.get_network_nodes()) == 3\n",
     "\n",
     "    \n",
     "    n1.set_start_learning(rounds=2,epochs=0)    \n",
