Some changes while testing with femnist

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -1270,7 +1270,9 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "1496d832",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1312,11 +1314,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e4aa1cc5",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "544640\n",
+      "25989076\n"
+     ]
+    }
+   ],
+   "source": [
+    "from p2pfl.learning.pytorch.mnist_examples.models.cnn import CNN\n",
+    "from p2pfl.learning.pytorch.mnist_examples.models.mlp import MLP\n",
+    "import pickle\n",
+    "m = MLP()\n",
+    "c = CNN()\n",
+    "\n",
+    "def len_model(model):\n",
+    "    params = model.state_dict()\n",
+    "    array = [val.cpu().numpy() for _, val in params.items()]\n",
+    "    return len(pickle.dumps((array)))\n",
+    "\n",
+    "print(len_model(m))\n",
+    "print(len_model(c))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98a712a8",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "544640\n",
+    "4801836\n",
+    "25989076"
+   ]
   }
  ],
  "metadata": {
