--- a/p2pfl/examples/cifar10/test.ipynb
+++ b/p2pfl/examples/cifar10/test.ipynb
@@ -50,7 +50,7 @@
     "# Data\n",
     "data = P2PFLDataset.from_huggingface(\"p2pfl/CIFAR10\")\n",
     "data.set_batch_size(256)\n",
-    "data.set_transforms(cifar10_transforms)\n"
+    "data.set_transforms(cifar10_transforms)"
    ]
   },
   {
@@ -429,7 +429,7 @@
     "for epoch in range(10):\n",
     "    print(f\"Epoch {epoch + 1}\")\n",
     "    learner.fit()\n",
-    "    learner.evaluate()\n"
+    "    learner.evaluate()"
    ]
   },
   {
