Fixed ruff check errors and linted with ruff

--- a/p2pfl/examples/cifar10/test.ipynb
+++ b/p2pfl/examples/cifar10/test.ipynb
@@ -23,9 +23,9 @@
     }
    ],
    "source": [
-    "from p2pfl.learning.dataset.p2pfl_dataset import P2PFLDataset\n",
     "from p2pfl.examples.cifar10.model.resnet_pytorch import model_build_fn\n",
     "from p2pfl.examples.cifar10.transforms import cifar10_transforms\n",
+    "from p2pfl.learning.dataset.p2pfl_dataset import P2PFLDataset\n",
     "from p2pfl.learning.frameworks.pytorch.lightning_learner import LightningLearner"
    ]
   },
@@ -50,7 +50,7 @@
     "# Data\n",
     "data = P2PFLDataset.from_huggingface(\"p2pfl/CIFAR10\")\n",
     "data.set_batch_size(256)\n",
-    "data.set_transforms(cifar10_transforms)\n"
+    "data.set_transforms(cifar10_transforms)"
    ]
   },
   {
@@ -429,7 +429,7 @@
     "for epoch in range(10):\n",
     "    print(f\"Epoch {epoch + 1}\")\n",
     "    learner.fit()\n",
-    "    learner.evaluate()\n"
+    "    learner.evaluate()"
    ]
   },
   {
